derive_tests/tests/compile_fail/wrong_type.stderr
error: Validator `range` can only be used on number types but found `String` for field `s`
 --> tests/compile_fail/wrong_type.rs:6:8
  |
6 |     s: String,
  |        ^^^^^^
